<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_value1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/first_value"
        android:textColor="@color/color_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_value2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_value1"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:text="@string/second_value"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_operator"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_value2"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:text="@string/operator"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b_calculate"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_operator"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:text="@string/calculate_text" />

    <EditText
        android:id="@+id/et_value1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tv_value1"
        android:layout_toRightOf="@+id/tv_value1"
        android:ems="10"
        android:hint="@string/hint_string"
        android:inputType="numberSigned"
        android:padding="5dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_value2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_value1"
        android:layout_toEndOf="@id/tv_value2"
        android:layout_toRightOf="@+id/tv_value2"
        android:ems="10"
        android:hint="@string/hint_string"
        android:inputType="numberSigned"
        android:padding="5dp"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spinner_operator"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_value2"
        android:layout_toEndOf="@+id/b_calculate"
        android:layout_toRightOf="@+id/b_calculate"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/spinner_operator"
        android:padding="5dp"
        android:text="" />

</RelativeLayout>